[gd_scene load_steps=12 format=3 uid="uid://yrab27ll6oeh"]

[ext_resource type="Script" path="res://scenes/ui/menu/campaign_selection.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://beirm1evrukrk" path="res://scenes/ui/menu/campaign_tile.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://thnrfs1tirjj" path="res://assets/gui/menu/backgrounds/main_panel.png" id="2_btryb"]
[ext_resource type="Texture2D" uid="uid://cat1jloyg2wym" path="res://assets/gui/menu/buttons/buttonMed_brown.png" id="4_dfath"]
[ext_resource type="Texture2D" uid="uid://bbdwp6f0d3nib" path="res://assets/gui/menu/buttons/buttonMed_brown_pressed.png" id="5_acmon"]
[ext_resource type="FontFile" uid="uid://btstgc45ggura" path="res://assets/fonts/courier.tres" id="5_hdbfc"]
[ext_resource type="Texture2D" uid="uid://dk8ep1qsmga0q" path="res://assets/gui/menu/buttons/buttonMed_brown_hover.png" id="6_yj6ym"]

[sub_resource type="Animation" id="3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="1"]
resource_name = "hide"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="2"]
resource_name = "show"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_40ebe"]
_data = {
"RESET": SubResource("3"),
"hide": SubResource("1"),
"show": SubResource("2")
}

[node name="campaign_selection" type="Control"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="background" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = -600.0
offset_top = -350.0
offset_right = 600.0
offset_bottom = 350.0
texture = ExtResource("2_btryb")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="widgets" type="Control" parent="."]
anchors_preset = 0
offset_left = -600.0
offset_top = -350.0
offset_right = 600.0
offset_bottom = 350.0

[node name="campaign1" parent="widgets" instance=ExtResource("2")]

[node name="campaign2" parent="widgets" instance=ExtResource("2")]
offset_left = 620.0
offset_right = 1160.0

[node name="campaign3" parent="widgets" instance=ExtResource("2")]
offset_top = 240.0
offset_bottom = 420.0

[node name="campaign4" parent="widgets" instance=ExtResource("2")]
offset_left = 620.0
offset_top = 240.0
offset_right = 1160.0
offset_bottom = 420.0

[node name="campaign5" parent="widgets" instance=ExtResource("2")]
offset_top = 440.0
offset_bottom = 620.0

[node name="campaign6" parent="widgets" instance=ExtResource("2")]
offset_left = 620.0
offset_top = 440.0
offset_right = 1160.0
offset_bottom = 620.0

[node name="back_button" type="TextureButton" parent="widgets"]
layout_mode = 0
offset_left = 505.0
offset_top = 645.0
offset_right = 695.0
offset_bottom = 685.0
texture_normal = ExtResource("4_dfath")
texture_pressed = ExtResource("5_acmon")
texture_hover = ExtResource("6_yj6ym")
texture_focused = ExtResource("6_yj6ym")

[node name="label" type="Label" parent="widgets/back_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_hdbfc")
text = "TR_BACK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="prev_button" type="TextureButton" parent="widgets"]
layout_mode = 0
offset_left = 40.0
offset_top = 645.0
offset_right = 230.0
offset_bottom = 685.0
texture_normal = ExtResource("4_dfath")
texture_pressed = ExtResource("5_acmon")
texture_hover = ExtResource("6_yj6ym")
texture_focused = ExtResource("6_yj6ym")

[node name="label" type="Label" parent="widgets/prev_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_hdbfc")
text = "TR_PREV"
horizontal_alignment = 1
vertical_alignment = 1

[node name="next_button" type="TextureButton" parent="widgets"]
layout_mode = 0
offset_left = 970.0
offset_top = 645.0
offset_right = 1160.0
offset_bottom = 685.0
texture_normal = ExtResource("4_dfath")
texture_pressed = ExtResource("5_acmon")
texture_hover = ExtResource("6_yj6ym")
texture_focused = ExtResource("6_yj6ym")

[node name="label" type="Label" parent="widgets/next_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_hdbfc")
text = "TR_NEXT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="animations" type="AnimationPlayer" parent="."]
speed_scale = 4.0
libraries = {
"": SubResource("AnimationLibrary_40ebe")
}

[connection signal="pressed" from="widgets/back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="widgets/prev_button" to="." method="_on_prev_button_pressed"]
[connection signal="pressed" from="widgets/next_button" to="." method="_on_next_button_pressed"]
